@@ -1,3 +1,5 @@
+* command line tools have a --verbose mode, that displays debug-level logging.
+
 * Added a 'paths' option to muninn-search that prints the physical path of the
   products found instead of the normal output.
 
